<resources>
    <string name="app_name">loginCardView</string>
    <string name="login">Login</string>
    <string name="not_yet_registered_sing_up_now">¿Tienes cuenta? Regístrate...</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="kizuna_gourmet">KIZUNA GOURMET</string>
    <string name="logo">logo</string>
    <string name="login_button">login into app</string>


    <string name="restaurant_1_name">Tokyo Bystro</string>
    <string name="restaurant_1_address">Avenida de Madrid, 8, Jaén</string>
    <string name="restaurant_1_phone">+34 622 573 233</string>
    <string name="restaurant_2_name">Shibuya Circuit</string>
    <string name="restaurant_2_address">Calle Gran Vía, 42, Madrid</string>
    <string name="restaurant_2_phone">+34 622 573 233</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="log_in">Inicia sesión...</string>


</resources>