<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".LoginActivity">


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="#B7000000"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="35dp"
            android:layout_height="match_parent"
            android:contentDescription="@string/logo"
            app:srcCompat="@drawable/logo" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="8dp"
            android:gravity="center_vertical"
            android:text="@string/kizuna_gourmet"
            android:textColor="#E87F56"
            android:textSize="24sp" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="615dp"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/dialog_fragmen_backgroundimg"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.551"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.225">


        <ImageView
            android:id="@+id/imageView8"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginTop="85dp"
            app:srcCompat="@drawable/login_ssign" />

        <EditText
            android:id="@+id/email_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="25dp"
            android:layout_marginBottom="20dp"
            android:backgroundTint="@color/orange"
            android:ems="10"
            android:hint="Correo"
            android:inputType="text"
            android:textColor="@color/orange"
            android:textColorHint="@color/orange"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/password_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="25dp"
            android:backgroundTint="@color/orange"
            android:ems="10"
            android:hint="Contraseña"
            android:inputType="textPassword"
            android:textColor="@color/orange"
            android:textColorHint="@color/orange"
            android:textSize="20sp" />

        <Button
            android:id="@+id/login_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="25dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/dialog_fragment_option_button"
            android:text="Login"
            android:textSize="20sp"
            app:backgroundTint="@null" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <TextView
                android:id="@+id/sing_up_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="20dp"
                android:text="@string/not_yet_registered_sing_up_now"
                android:textAlignment="center"
                android:textColor="#FF8247"
                android:layout_marginHorizontal="20dp"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/reset_password_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="20dp"
                android:text="Recuperar contraseña"
                android:layout_marginHorizontal="20dp"
                android:textColor="#FF8247"
                android:textSize="14sp" />

        </LinearLayout>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>